fix: scrollbar for all app

--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,17 @@
 
 
 ::-webkit-scrollbar {
-  width: 12px;
-  background: #000;
+    width: 12px;
+    background: #000;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(transparent, #002aff);
-  border-radius: 6px;
+    border-radius: 6px;
+    background: #373B44; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4286f4, #373B44); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4286f4, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb:hover {
